--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "format": "prettier --write \"src/**/*.{js,html,css}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/index.html --port 3000"
+    "dev": "node devServer.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "constants": "0.0.2",
     "gifs": "0.0.8",
@@ -32,6 +31,8 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
     "node-sass": "^4.13.1",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
