--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gif-library-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "format": "prettier --write \"src/**/*.{js,html,css}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,16 +14,8 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "bulma": "^0.8.0",
-    "constants": "0.0.2",
-    "gifs": "0.0.8",
-    "home": "^2.0.0",
-    "index": "^0.4.0",
-    "jwt-decode": "^2.2.0",
-    "login": "^0.8.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "register": "0.0.0",
-    "search": "^1.0.0"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
